fix contrast ratios

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -37,7 +37,7 @@
 		--text: #f5f5f5;
 		--text-light: #cdcdcd;
 		--border: #6a5b48;
-		--accent: #ba8200;
+		--accent: #eda500;
 		--accent-light: #ffecb3;
 		--code: #f06292;
 		--preformatted: #ccc;
